# DalbaragiTools

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp  work_bundle.cpp  work_compile.cpp  work_functions.hpp  work_key.cpp  work_keygen.cpp
app/ops/: work_batch.cpp  work_bundle.cpp  work_compile.cpp  work_key.cpp  work_keygen.cpp
cmake/: dalbaragiConfig.cmake.in
include/daltools/: byte_tool.h  compression.h  crypto.h  konst.h  model_exporter.h  model_parser.h  modifier.h  struct.h  util.h
include/daltools/bundle/: bundle.hpp  repo.hpp
include/daltools/common/: bin_data.h  byte_tool.h  compression.h  crypto.h  glm_tool.hpp  util.h
include/daltools/dmd/: exporter.h  parser.h
include/daltools/filesys/: filesys.hpp  res_mgr.hpp
include/daltools/img/: img.hpp  img2d.hpp
include/daltools/img/backend/: ktx.hpp  stb.hpp
include/daltools/img/ktx/: img.hpp
include/daltools/json/: parser.h
include/daltools/scene/: modifier.h  struct.h
script/: build_ktx.py  daltools_batch.py  inpect_dal_json.py
src/: byte_tool.cpp  compression.cpp  crypto.cpp  json_parser.cpp  model_exporter.cpp  model_parser.cpp  modifier.cpp  modifier_scene.cpp  struct.cpp  util.cpp
src/bundle/: bundle.cpp  repo.cpp
src/common/: byte_tool.cpp  compression.cpp  crypto.cpp  util.cpp
src/dmd/: exporter.cpp  parser.cpp
src/filesys/: filesys.cpp  res_mgr.cpp
src/img/: img.cpp
src/img/backend/: ktx.cpp  stb.cpp
src/img/ktx/: img.cpp
src/json/: parser.cpp
src/scene/: modifier.cpp  modifier_scene.cpp  struct.cpp
test/: CMakeLists.txt  Character Running.json  demo_dal_map.json  honoka_basic_3.dmd  irin.dmd  missing_model.json  simple_box.json  test_1.cpp  test_2.cpp  test_crypto.cpp  test_dmd.cpp  test_filesys.cpp  test_img.cpp  test_json.cpp  test_keygen.cpp  test_ktx.cpp  test_zip.cpp  waved_floor.json
test/img/: stripes.ktx
vcpkg/ports/sungtools/: portfile.cmake  vcpkg.json
